.harness/results/p7-delta-social-ui/gate_result_attempt1.txt
   Compiling sim-bridge v0.7.0 (/Users/rexxa/github/new-world-wt/lead/rust/crates/sim-bridge)
   Compiling sim-test v0.7.0 (/Users/rexxa/github/new-world-wt/lead/rust/crates/sim-test)
error[E0308]: mismatched types
   --> crates/sim-test/tests/harness_p4_gamma_rendering.rs:226:13
    |
226 |         let (ids, xs, ys) = agent_rows_split(&rows);
    |             ^^^^^^^^^^^^^   ----------------------- this expression has type `(Vec<i64>, Vec<i32>, Vec<i32>, Vec<u8>)`
    |             |
    |             expected a tuple with 4 elements, found one with 3 elements
    |
    = note: expected tuple `(Vec<i64>, Vec<i32>, Vec<i32>, Vec<u8>)`
               found tuple `(_, _, _)`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `sim-test` (test "harness_p4_gamma_rendering") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
